--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -1,5 +1,17 @@
+/* .wrapper {
+  padding-top: 50px;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 20px;
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
+} */
+
 .wrapper {
   padding-top: 50px;
+  background: #ECEFF1;
   height: 100%;
   display: flex;
   flex-flow: row wrap;
